@@ -1855,6 +1855,7 @@ Example : imc2 channels\n\r\
 Short(s): \n\r\
 List all the channels potentially available to this mud.
 
+RELOAD=LOAD\
 LOAD=\
 Command : LOAD\n\r\
 Usage   : LOAD [AMMUNITION NAME] [WEAPON NAME]\n\r\
