@@ -3847,6 +3847,14 @@ occupied to fight.  During combat, attempting this move may allow \
 your opponent a quick attack.  The initiator can use "release" to \
 release the hold.
 
+FIGHTER_PISTOL_WHIP=FIGHTER_PISTOLWHIP
+PISTOLWHIP=FIGHTER_PISTOLWHIP
+FIGHTER_PISTOLWHIP=<ABILITY>\
+Usage    : PISTOLWHIP [TARGET NAME]\n\r\
+Example  : pistolwhip orc\n\r\
+Makes an attack with a crossbow or similar ranged weapon with a \
+blunt end.
+
 THIEF_PIRATE_FAMILIAR=THIEF_PIRATEFAMILIAR
 THIEF_CALL_PIRATE_FAMILIAR=THIEF_PIRATEFAMILIAR
 CALL_PIRATE_FAMILIAR=THIEF_PIRATEFAMILIAR
