@@ -11,6 +11,8 @@
  10. AWARDS/AutoProperties can now be modified from the CL.
  11. STAT command can be limited with FULSTATS disable flag and lists.ini file.
  12. Predict Tides gives a bit more information to Mer.
+ 13. RELOAD is now a synonym for the player LOAD command, as it should always have been.
+ 14. New fighter/ranger skills: Pistolwhip
 
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
